<resources>
    <string name="app_name">vlni e-commerce</string>
    <string name="sales_icon">Sales</string>
    <string name="contacts_text">Contacts</string>
    <string name="about_text">About us</string>
    <string name="main_scene_text">Main</string>
    <string name="store_title">Store</string>
    <string name="app_title">App</string>
    <string name="filter">Filter</string>
    <string name="category_button">Button</string>
    <string name="type_button">Button</string>
    <string name="course_start_date">Start date</string>
    <string name="course_level">Level</string>
    <string name="device">iPhone 15 Pro</string>
    <string name="price">1200 Euro</string>
    <string name="rating">Raiting</string>
    <string name="rating_number">10</string>
    <string name="device_info">Model year: 2023. \nDisplay diagonal, inch: 6.1. \nDisplay resolution: 1080x2640</string>
    <string name="couse_desc">The Java training program is designed for beginners in this area. For the program you will study the construction of graphic applications for PCs, the development of web sites based on Java Spring Boot, study the construction of full -fledged android applications and perfectly study the Java language itself!</string>
    <string name="infobip_application_code">bf2c400d3f1f52722b4d38e5dd2f8d3a-4ba5c5e9-927e-4f51-b86e-63ee32e838a6</string>
    <string name="authorisation_title">Authorisation</string>
    <string name="email_input">Enter email</string>
    <string name="password_input">Enter password</string>
    <string name="login_button">LOG IN</string>
    <string name="login_text">Log in</string>
    <string name="dont_have_accont_text">Don\'t have an account yet?</string>
    <string name="link_to_registration">Register here</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_age">Enter your age</string>
    <string name="enter_country">Enter your country</string>
    <string name="enter_city">Enter your city</string>
    <string name="enter_address">Enter your address</string>
    <string name="phone_input">Enter phone number</string>
    <string name="confirm_password_input">Confirm password</string>
    <string name="registration_title">Registration</string>
    <string name="registratiion_button">Registration</string>
    <string name="have_an_account_text">Have an account?</string>
    <string name="link_to_authorisation">Sign up here</string>
    <string name="enter_gender">Enter your gender</string>
</resources>